k8s/MatchmakerLocal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matchmaker-deployment
  labels:
    role: matchmaker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matchmaker
  template:
    metadata:
      labels:
        app: matchmaker
    spec:
      containers:
        - name: matchmaker
          image: docker.io/tp8843/pigeon-project-matchmaker
          imagePullPolicy: Always
          ports:
            - name: matchmaker
              containerPort: 3000
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: matchmaker-service
spec:
  selector:
    app: matchmaker
  ports:
    - name: matchmaker
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: matchmaker-ingress
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/`)
      services:
        - kind: Service
          name: matchmaker-service
          port: 3000
