k8s/MatchmakerTraefik.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matchmaker-deployment
  labels:
    role: matchmaker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matchmaker
  template:
    metadata:
      labels:
        app: matchmaker
    spec:
      containers:
        - name: matchmaker
          image: docker.io/tp8843/pigeon-project-matchmaker
          imagePullPolicy: Always
          ports:
            - name: matchmaker
              containerPort: 3000
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: matchmaker-service
spec:
  selector:
    app: matchmaker
  ports:
    - name: matchmaker
      protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matchmaker-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: matchmaker-service
                port:
                  number: 80
